# cu-ffar249

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
app/: package-lock.json  package.json  vite.config.js
app/public/css/: style.css
app/src/: constants.mjs  main.mjs  resources.mjs
app/src/components/: button.mjs  input.mjs
app/src/components/affect/: AffectNoiseFieldDrawable.mjs
app/src/p5/: global.mjs  interfaces.mjs  scene.mjs
app/src/p5/components/: input.mjs
app/src/scenes/: game.mjs  loading.mjs  menu.mjs
app/src/services/: affect-engine-client.mjs
app/src/services/affect-engine/: AffectEngineClient.mjs  index.js
max-msp/: max-msp.js  package-lock.json  package.json  soundbackend.maxpat
max-msp/sounds/: 180662__klankbeeld__citypark-redesigned-130307_00.flac
scripts/: lines.txt  max-msp.js  run-models.js
scripts/cli/: main.mjs  package-lock.json  package.json
scripts/install-models/: .gitignore  main.sh  pyproject.toml
server/: package-lock.json  package.json
server/src/: main.mjs
server/src/engine/: AffectEngineRuntime.mjs  AnxietyAffectEngine.mjs
server/src/engine/affect/: AbstractAffectEngine.mjs  AnxietyAffectEngine.mjs  BurnoutAffectEngine.mjs  DepressionAffectEngine.mjs
server/src/nlp/: vad-bert.js
src/: main.mjs  resources.mjs
src/components/: input.mjs
src/p5/: interfaces.mjs  runtime.mjs  scene.mjs
src/p5/components/: input.mjs
src/scenes/: blue.mjs  game.mjs  green.mjs  menu.mjs  red.mjs
src/utils/: fonts.mjs  loading-tracker.mjs
(+3 files in other folders)
