[project]
name = "cu-ffar249"
version = "0.1.0"
description = "Helper scripts for FFAR249 Project"
authors = [
    {name = "Philippe Hebert", email = "philippe.hebert.home@gmail.com"},
    {name = "Philippe Beauchemin", email = "philou.beauchemin@gmail.com"}
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-shell = "^1.0"

[tool.poetry.dependencies]
transformers = ">=4.36,<4.58"
optimum-onnx = "^0.1.0"
onnx = "^1.20"
onnxruntime = "^1.24.3"
optimum = "^2.1.0"
accelerate = "^1.13.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
